# textgen

./: README.md  textgen.cabal
src/: TextGen.hs
test/: Spec.hs
