name:                textgen
version:             0.1.0.0
synopsis:            Simple combinator library for text generators
description:         Please see README.md
homepage:            https://github.com/spikelynch/textgen#readme
license:             GPL
license-file:        LICENSE
author:              Mike Lynch
maintainer:          mike@mikelynch.org
copyright:           2016 Mike Lynch
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TextGen
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.1.3 
                     , random >= 1.1
  default-language:    Haskell2010


test-suite textgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , textgen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spikelynch/textgen
